# nest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  SPECS.md  TODO.md
.github/workflows/: ci.yml
bird/public/: index.html  main.js  styles.css
bird/src-tauri/: Cargo.toml  tauri.conf.json
bird/src-tauri/capabilities/: default.json
bird/src-tauri/src/: agent.rs  api.rs  commands.rs  config.rs  egg.rs  error.rs  forage.rs  lib.rs  main.rs  process.rs  state.rs  storage.rs  sync.rs
nest/: Cargo.toml
nest/migrations/: 0001_init.sql  0002_sync_state.sql
nest/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs
nest/src/repository/: bird.rs  clutch.rs  egg.rs  flock.rs  mod.rs  sync.rs
nest/src/routes/: bird.rs  clutch.rs  flock.rs  health.rs  mod.rs
nest/tests/: integration.rs
shared/: Cargo.toml
shared/src/: api.rs  domain.rs  lib.rs
