[workspace]
resolver = "2"
members = ["nest", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Vaalley/nest"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
