[package]
name = "nest-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Nest — a lightweight save-backup server for the Nest project."

[lib]
name = "nest_server"
path = "src/lib.rs"

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
nest-shared = { path = "../shared" }

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
